--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "firebase": "^9.22.2",
     "modern-normalize": "^1.1.0",
     "notiflix": "^3.2.6",
     "tui-pagination": "^3.4.1"
