--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "parcel-project-template",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://Anna-Voronina.github.io/jsdeploy",
+  "homepage": "https://GoitStudentsWorks.github.io/js_bc54_Anna-Voronina",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /jsdeploy/"
+    "build": "parcel build src/*.html --public-url /js_bc54_Anna-Voronina/"
   },
   "repository": {
     "type": "git",
